# dashboardy

./: .dockerignore  .env.example  .eslintignore  .gitignore  .pre-commit-config.yaml  DESIGN.json  DESIGN.md  PRODUCT.md  README.md  package.json  pnpm-lock.yaml
apps/api/: .dockerignore  Dockerfile  README.md  package.json  pyproject.toml
apps/api/app/: config.py  logging.py  main.py  middleware.py
apps/api/app/admin/: __init__.py  asset_grants_service.py  members_service.py  routes.py  schemas.py  supabase_admin.py
apps/api/app/auth_context/: __init__.py  context.py  dependencies.py  jwt.py  schemas.py
apps/api/app/common/: __init__.py  enums.py
apps/api/app/connections/: authz.py  enums.py  errors.py  protocols.py  redaction.py  repository.py  schemas.py  service.py  snowflake.py  status_transitions.py  vault.py
apps/api/app/db/: deps.py  session.py
apps/api/app/models/: __init__.py  auth_tenancy.py  base.py  data_connections.py
apps/api/app/routes/: __init__.py  health.py  me.py  ready.py  workspaces.py
apps/api/app/tenancy/: __init__.py  permissions.py  repository.py  resolver.py
apps/api/tests/: asset_grants_fixtures.py  conftest.py  docker_util.py  me_fixtures.py  member_management_fixtures.py  test_auth_tenancy_migration.py  test_config_fail_fast.py  test_data_connections_migration.py  test_health.py  test_health_latency.py  test_logging_correlation.py  test_migrations_idempotent.py  test_no_secret_in_logs.py  test_ready.py  workspace_switch_fixtures.py
apps/api/tests/contract/: __init__.py  test_asset_grant_delete_contract.py  (+5 more)
docs/: env.md  (+1 more)
(+100 files in other folders)
