[project]
name = "dashboardy-api"
version = "0.1.0"
description = "Dashboardy API service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.30",
  "alembic>=1.14",
  "structlog>=24.4",
  "python-json-logger>=2.0",
  "httpx>=0.27",
  "pyjwt[crypto]>=2.12.1",
]

[dependency-groups]
dev = [
  "pre-commit>=4.6.0",
  "pytest>=8",
  "pytest-asyncio>=0.24",
  "ruff>=0.7",
  "testcontainers>=4",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
target-version = "py312"
src = ["app"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
